Fix overflow on card carousel

--- a/src/components/card-carousel/_carousel.scss
+++ b/src/components/card-carousel/_carousel.scss
@@ -4,6 +4,11 @@
   display: flex;
   flex-direction: column;
   padding-bottom: 4rem;
+  overflow: hidden;
+
+  @include breakpoint('md') {
+    overflow: visible;
+  }
 
   * {
     box-sizing: border-box;
